@@ -86,9 +86,8 @@
     <lib.quarkus-github-api.version>1.330.0</lib.quarkus-github-api.version>
     <lib.quarkus-mailpit.version>2.0.0</lib.quarkus-mailpit.version>
     <lib.snappy-java.version>1.1.10.8</lib.snappy-java.version>
-    <lib.testcontainers-minio.version>1.21.4</lib.testcontainers-minio.version>
     <lib.wiremock.version>2.35.2</lib.wiremock.version>
-    <quarkus.platform.version>3.30.6</quarkus.platform.version>
+    <quarkus.platform.version>3.31.0</quarkus.platform.version>
     <quarkus.wiremock.version>1.5.3</quarkus.wiremock.version>
     <lib.brotli.version>0.1.2</lib.brotli.version>
 
@@ -295,12 +294,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>minio</artifactId>
-        <version>${lib.testcontainers-minio.version}</version>
-      </dependency>
-
-      <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-artifact</artifactId>
         <version>${lib.maven-artifact.version}</version>
@@ -396,21 +389,15 @@
           <artifactId>quarkus-maven-plugin</artifactId>
           <version>${quarkus.platform.version}</version>
           <extensions>true</extensions>
-          <executions>
-            <execution>
-              <goals>
-                <goal>build</goal>
-                <goal>generate-code</goal>
-                <goal>generate-code-tests</goal>
-              </goals>
-            </execution>
-          </executions>
         </plugin>
 
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${surefire-plugin.version}</version>
           <configuration>
+            <argLine>
+              @{argLine} --add-opens=java.base/java.lang.invoke=ALL-UNNAMED -Xmx2g -Dquarkus.log.level=WARN
+            </argLine>
             <systemPropertyVariables>
               <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             </systemPropertyVariables>
@@ -427,6 +414,9 @@
                 <goal>verify</goal>
               </goals>
               <configuration>
+                <argLine>
+                  @{argLine} --add-opens=java.base/java.lang.invoke=ALL-UNNAMED -Xmx2g -Dquarkus.log.level=WARN
+                </argLine>
                 <includes>
                   <include>**/*IT.java</include>
                   <include>**/*E2ET.java</include>
